cabal-version:      3.0
category:           Languages
build-type:         Simple
name:               Sebastian
synopsis:           Functional shell
version:            0.1.0

common defaults
  ghc-options:
    -threaded
    -rtsopts
    -O2
    -Wall
    -Wincomplete-patterns
    -fwrite-ide-info
    -hiedir=.hie         
       
  default-extensions:
    GADTs
    ScopedTypeVariables
    BlockArguments
    LambdaCase
    DerivingVia
    DeriveDataTypeable
    OverloadedStrings
    DeriveFunctor
    OverloadedStrings
    MultiParamTypeClasses
    FlexibleInstances
    PatternSynonyms
    GeneralizedNewtypeDeriving
    DerivingStrategies
    DataKinds
    KindSignatures
    RecordWildCards
    BangPatterns

  build-depends:
      base
    , array
    , bytestring
    , containers
    , parsec
    , lens
    , mtl
    , prettyprinter
    , prettyprinter-ansi-terminal    
    , text
    , transformers
    , QuickCheck
    , semirings
    , text
    , unordered-containers

  default-language:
    Haskell2010

executable exe
  import: defaults

  build-depends:
    Core

  main-is:
    Main.hs

  hs-source-dirs:
    app/


Library Core
  import: defaults

  hs-source-dirs:
    src/

  exposed-modules:
    Parser.Lex
    Parser.Monad
    Parser.Alex
    Parser.Parse
    Parser.SrcInfo

test-suite test

  main-is:
    Main.hs

  type:
    exitcode-stdio-1.0

  ghc-options:
    -threaded -with-rtsopts=-N

  hs-source-dirs:
    test/

  build-depends:
      Core
    , base
    , QuickCheck
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , text
